--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -82,7 +82,7 @@ producing noise like Alsa, OSS, ESD, libao, SDL, PC speaker (if present), ...
 <br>
 <img src="images/q2.png" height="20" border="0"> (optionally) takes advantage of
 libraries like audiofile, sndfile, xmp (Extended Module Player), mikmod, sidplay,
-SDL, festival, ...
+SDL, festival, libxmms, ...
 <br>
 <br>
 <img src="images/q3.png" height="20" border="0"> can be controlled with a joystick
@@ -117,10 +117,10 @@ time a real autoconf replacement
 <img src="images/white.png" width="620" height="15" border="0">
 <br>
 <!--img src="images/download.png" border="0" height="160"></a><br-->
-<a href="http://developer.berlios.de/cvs/?group_id=4373" target="_blank"><img src="images/cvs.png" border="0" height="40"></a>
-<a href="quh/changes.html" target="_blank"><img src="images/changes.png" border="0" height="40"></a>
-<a href="quh/readme.html" target="_blank"><img src="images/readme.png" border="0" height="40"></a>
-<a href="quh/license.html" target="_blank"><img src="images/license.png" border="0" height="40"></a>
+<a href="http://developer.berlios.de/cvs/?group_id=4373"><img src="images/cvs.png" border="0" height="40"></a>
+<a href="quh/changes.html"><img src="images/changes.png" border="0" height="40"></a>
+<a href="quh/readme.html"><img src="images/readme.png" border="0" height="40"></a>
+<a href="quh/license.html"><img src="images/license.png" border="0" height="40"></a>
 <a href="mailto:noisyb@gmx.net"><img src="images/contact.png" border="0" height="40"></a>
 <br>
 <img src="images/white.png" width="620" height="15" border="0">
@@ -130,12 +130,13 @@ time a real autoconf replacement
 </table>
 </center>
 <a href="http://developer.berlios.de" title="BerliOS Developer"> <img src="http://developer.berlios.de/bslogo.php?group_id=4373" width="124px" height="32px" border="0" alt="BerliOS Developer Logo"></a>
+<br>
 <!-- Begin Nedstat Basic code -->
 <!-- Title: Quh -->
 <!-- URL: http://quh.berlios.de/ -->
 <script language="JavaScript" src="http://m1.nedstatbasic.net/basic.js">
 </script>
-<a target="_blank" href="http://www.webstats4u.com/stats?ADxgsAYFdTpD4fs/wmFkKysebBaA">
+<a href="http://www.webstats4u.com/stats?ADxgsAYFdTpD4fs/wmFkKysebBaA">
 <img src="http://m1.webstats4u.com/n?id=ADxgsAYFdTpD4fs/wmFkKysebBaA" border="0" width="18" height="18">
 </a>
 </BODY>
