--- a/htdocs/index.htm
+++ b/htdocs/index.htm
@@ -22,15 +22,38 @@
 <meta name="DC.Coverage" content="">
 <meta name="DC.Rights" content="GPL">
 </head>
-<body>
-<font size="7">Quh</font><br>
-Having ears makes sense again<br>
+<body bgcolor="#000000" text="#ffffff">
+<span style="font-family: monospace;">
 <br>
-Quh will replace all other audio 
+<br>
+<br>
+<center><img src="images/q1.png" height="150"><img src="images/hemsa.png" height="110">
+<br>
+<br>
+<br>
+<br>
+<img src="images/bg3.png" border="0">
+<br>
+<br>
+<br>
+<br>
+<table width="640">
+  <tr>
+    <td>
+<center>
+<font size="-1">
+<img src="images/white.png" width="620" height="15" border="0">
+<br>
+<img src="images/new.png" border="0"> 20060320 Quh 0.3.0 is available from CVS<br>
+<br>
+<img src="images/white.png" width="620" height="15" border="0">
+<br>
+<br>
+<img src="images/q3.png" height="20" border="0"> will replace all other audio 
 players because there are too many :-)
 <br> 
 <br>
-Quh supports 100+ different noise
+<img src="images/q2.png" height="20" border="0"> supports 100+ different noise
 containing file, stream or data formats/sources/filters like:<br>
 cdda read, ffmpeg (3g2, 3gp, 4xm, RoQ, aac, ac3, adts, aiff, alaw, asf, au,
 avi, avs, crc, daud, dts, dv, dv1394, dvd, ea, ffm, film_cpk, flic, flv,
@@ -54,54 +77,62 @@ libao, oss (linux), raw write, read, sdl (audio), speaker, stdin read,
 stdout write, vol, wav write
 <br>
 <br>
-Quh supports 10+ different ways of
+<img src="images/q1.png" height="20" border="0"> supports 10+ different ways of
 producing noise like Alsa, OSS, ESD, libao, SDL, PC speaker (if present), ...
 <br>
 <br>
-Quh (optionally) takes advantage of
+<img src="images/q2.png" height="20" border="0"> (optionally) takes advantage of
 libraries like audiofile, sndfile, xmp (Extended Module Player), mikmod, sidplay,
 SDL, festival, libxmms, ...
 <br>
 <br>
-Quh can be controlled with a joystick
+<img src="images/q3.png" height="20" border="0"> can be controlled with a joystick
 <!-- or remote control (lirc)-->
 <br>
 <br>
-Quh is like an reference example
+<img src="images/q1.png" height="20" border="0"> is like an reference example
 on how to cultivate bloated API's into an file-operations analogy
 <br>
 <br>
-Quh uses keyboard shortcuts similar
+<img src="images/q2.png" height="20" border="0"> uses keyboard shortcuts similar
 to those of MPlayer
 <br>
 <br>
-Quh speaks text files in different 
+<img src="images/q3.png" height="20" border="0"> speaks text files in different 
 languages using speech synthesis (festival)
 <br>
 <br>
-Quh does NOT require an installed 
+<img src="images/q2.png" height="20" border="0"> does NOT require an installed 
 desktop enviroment or GUI toolkit
 <br>
 <br>
-Quh does NOT require any plugins
+<img src="images/q1.png" height="20" border="0"> does NOT require any plugins
 <br>
 <br>
-Quh is only ~100kBytes in size with all support enabled<br>
+<img src="images/q2.png" height="20" border="0"> is only ~100kBytes in size with all support enabled<br>
 (~50 with upx compression)
 <br>
 <br>
-Quh sources utilize for the first
+<img src="images/q3.png" height="20" border="0"> sources utilize for the first
 time a real autoconf replacement
 <br>
 <br>
 <br>
-Current version: 0.3.0<br>
+<img src="images/white.png" width="620" height="15" border="0">
 <br>
+<!--img src="images/download.png" border="0" height="160"></a><br-->
+<a href="http://developer.berlios.de/cvs/?group_id=4373"><img src="images/cvs.png" border="0" height="40"></a>
+<a href="quh/changes.html"><img src="images/changes.png" border="0" height="40"></a>
+<a href="quh/readme.html"><img src="images/readme.png" border="0" height="40"></a>
+<a href="quh/license.html"><img src="images/license.png" border="0" height="40"></a>
+<a href="mailto:noisyb@gmx.net"><img src="images/contact.png" border="0" height="40"></a>
 <br>
-Project Page: <a href="http://developer.berlios.de/projects/quh">http://developer.berlios.de/projects/quh</a><br>
-<br>
-Downloads:  <a href="http://developer.berlios.de/projects/quh">http://developer.berlios.de/projects/quh</a><br>
-<br>
+<img src="images/white.png" width="620" height="15" border="0">
+</center>
+    </td>
+  </tr>
+</table>
+</center>
 <a href="http://developer.berlios.de" title="BerliOS Developer"> <img src="http://developer.berlios.de/bslogo.php?group_id=4373" width="124px" height="32px" border="0" alt="BerliOS Developer Logo"></a>
 <br>
 <!-- Begin Nedstat Basic code -->
@@ -112,6 +143,6 @@ Downloads:  <a href="http://developer.berlios.de/projects/quh">http://developer.
 <a href="http://www.webstats4u.com/stats?ADxgsAYFdTpD4fs/wmFkKysebBaA">
 <img src="http://m1.webstats4u.com/n?id=ADxgsAYFdTpD4fs/wmFkKysebBaA" border="0" width="18" height="18">
 </a>
-
-</body>
-</html>
+</span>
+</BODY>
+</HTML>
