--- a/quh/changes.html
+++ b/quh/changes.html
@@ -1,7 +1,42 @@
 <html><head>
 <link rel="icon" href="images/icon.png" type="image/png">
 <title>Quh - CHANGES</title></head><body bgcolor="#ffffff"><tt><pre>
+<p>
 <a name="030">0.3.0</a><br>
 - initial CVS only release
 <p>
+<a name="031">0.3.1</a><br>
+- enough time wasted (almost 2 years); Quh will be released now in a slimmed down
+  version and all missing features will be revised and added release by release
+- plays flac, mp3, ogg, wav and raw
+- supports id3 tags
+<!--
+ - alsa support
+ - libst support
+ - ape support
+ - ffmpeg support
+ - joystick support
+ - midi
+ - remote (lirc) support
+ - lyrics support
+ - midi support
+ - cdxa support
+ - server/client support
+ - support stdin as input (read.c)
+ - xmms plugin support 
+ - more gracetime for flite? (check if child process still exists)
+ - PC speaker
+ - soundmosaic
+ - rewind/fastforward _with_ sound
+ - cd-text and cd-extra support
+ - GameBoy GBS Music soundtracks of Nintendo GameBoy games
+ - GameBoy Advance GSF Music soundtracks of GameBoy Advance games
+ - Genesis GYM Music soundtracks of Sega Genesis and 32X games
+ - PC Engine HES Music soundtracks of PC Engine/Turbo Grafx 16 games
+ - Nintendo NSF Music soundtracks of Nintendo games
+ - Nintendo 64 USF Music soundtracks of Nintendo 64 games
+ - Playstation PSF/PSF2 Music soundtracks of Playstation and PS2 games
+ - SMS/GG VGM Music soundtracks of Sega Master System and Game Gear games
+ - Super Nintendo SPC Music soundtracks of Super Nintendo games
+-->
 </tt></body></html>
