--- a/quh/changes.html
+++ b/quh/changes.html
@@ -13,30 +13,20 @@
 <p>
 <a name="032">0.3.2</a><br>
 - added --ao[=DRIVER] write to soundcard using libao DRIVER (default: auto)
-- added libaudiofile support
-- added support for CDDA playback
+- added libaudiofile (for reading) support
+- added support for (cable-free) CDDA playback
 - added --cddb[=URL]  read CDDB info from server with URL
+- added --esd write to soundcard using EsounD
 <!--
- - fix --cddb=URL
- - fix --cdda[=MB]
+ - test/fix misc options
+
+ - joystick support
  - alsa support
  - libst support
- - ape support
- - ffmpeg support
- - joystick support
- - midi
- - remote (lirc) support
  - lyrics support
- - midi support
- - cdxa support
  - server/client support
- - support stdin as input (read.c)
- - xmms plugin support 
- - more gracetime for flite? (check if child process still exists)
- - PC speaker
- - soundmosaic
- - rewind/fastforward _with_ sound
- - cd-text and cd-extra support
+
+ - midi support (timidity)
  - GameBoy GBS Music soundtracks of Nintendo GameBoy games
  - GameBoy Advance GSF Music soundtracks of GameBoy Advance games
  - Genesis GYM Music soundtracks of Sega Genesis and 32X games
@@ -46,5 +36,20 @@
  - Playstation PSF/PSF2 Music soundtracks of Playstation and PS2 games
  - SMS/GG VGM Music soundtracks of Sega Master System and Game Gear games
  - Super Nintendo SPC Music soundtracks of Super Nintendo games
+ - ape support
+ - ffmpeg support
+
+ - cdxa support
+ - support stdin as input (read.c)
+ - more gracetime for flite? (check if child process still exists)
+ - PC speaker
+ - soundmosaic effect
+ - rewind/fastforward _with_ sound
+ - cd-text and cd-extra support
+
+ - fix --cddb=URL
+ - fix --cdda[=MB]
+ - fix stdout
+ - fix decode
 -->
 </tt></body></html>
