--- a/htdocs/quh/changes.html
+++ b/htdocs/quh/changes.html
@@ -19,6 +19,9 @@
 - added --cddb read CDDB info from freedb.org
 - added --esd write to soundcard using EsounD
 - added libsndfile (for reading) support
+<p>
+<a name="033">0.3.3</a><br>
+- more code cleanup
 <!--
 - added libmikmod support
 - added libxmp support
@@ -62,7 +65,6 @@
 
 - Playlist support
 
-- fix --cddb=URL
 - fix --cdda[=MB]
 - fix stdout
 - fix --wav and --raw output (indices!)
